fixes #225 update build.gradle test section so we can see logging from tests and set more memory